[B][COLOR gold]v3.3.93[/COLOR][/B]
- Re:sources filters tweaks

[B][COLOR gold]v3.3.92[/COLOR][/B]
- Fixed downloading to network shares

[B][COLOR gold]v3.3.9[/COLOR][/B]
- Kodi 19 fix

[B][COLOR gold]v3.3.7-8[/COLOR][/B]
- Re-arranged source fetching and filtering (internally) for more accuracy on source
    counting, and pre-emptive termination to take into account more filters (WiP)
- Personal Fanart.tv API key is now required to be entered in settings, in order to fetch
    extra and hq artwork
    That was done due to some add-ons (like fake-exodus from kodibae, and pressplay) cloning
    TheOath, along with the add-on's hard-coded API keys

[B][COLOR gold]v3.3.6[/COLOR][/B]
- Minor tweaks to previous commits

[B][COLOR gold]v3.3.5[/COLOR][/B]
- Added option to enable/disable size filtering
    If you already use size filtering you'll have to enable this option, as it's off by default
- Pre-emptive termination now takes size filters into account as well
    That means that scraping will stop when enough sources that meet your max quality
    and size filters criteria are found
- Added function that tries to circumvent data mismatches between metadata sites
    and scene releases

[B][COLOR gold]v3.3.4[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v3.3.2[/COLOR][/B]
- Added file size limits options
- Added option to display file name as extra source info
- Rearranged settings
- Applied nasty hack to circumvent odd issue with double line source list scrolling

[B][COLOR gold]v3.3.1[/COLOR][/B]
- (Re)added option for extra & high quality artwork fetching
    Personal Fanart.tv API key is recommended to be applied in settings - possibly
    requiered eventually
- Fixed some issues with "Play random"
- Fixed downloading and library insertion when title has accented/special characters

[B][COLOR gold]v3.3.0[/COLOR][/B]
- Some more text encoding/decoding fixes
- Library fix for Kodi 19/py3

[B][COLOR gold]v3.2.9[/COLOR][/B]