@@ -70,9 +70,6 @@ if action == None:
     from resources.lib.modules import control
     control.mod_fix()
     cache.cache_version_check()
-    if control.setting('startup.sync.trakt.status') == 'true':
-        from resources.lib.modules import trakt
-        trakt.syncTraktStatus()
     navigator.navigator().root()
 
 elif action == "furkNavigator":
